# MadBoredomSQL

./: .gitignore  README.md  config.py  pyproject.toml
reports/: table_actions_report.xlsx
src/: main.py
