[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "vess william",email = "vess1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[tool.poetry.scripts]
start = "src.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
